# PokeTactician-Engine

./: .gitignore  .ruff.toml  ACO.py  Colony.py  DB_Query.py  DataGathering.py  Dockerfile  MOACO.py  Moves.pkl  Pok.pkl  README.md  compose.yaml  glob_var.py  hasura_metadata.json  main.py  pokemon.ipynb  profiler.py  pymoo.ipynb  pymoo_old.ipynb  pyproject.toml  requirements.txt  timing.py  utils.py
.devcontainer/: devcontainer.json
dash_app/: app.py  callbacks.py  components.py  filters.py  layouts.py  utils.py
dash_app/assets/: style.css
data/: DB_Query.py  availability_legend.json  games.json  move_data.json  pokemon_availability.json  postproc_game_av.json
experiments/: experiment_analysis.ipynb  multiprocessing_test.py  run.py
experiments/data/: averages_dict_nonGPT.xz
models/: Move.py  Pokemon.py
poketactician/: Colony.py  MOACO.py  __main__.py  config.py  cooperationStrats.py  glob_var.py  objectives.py  poketactician.py  registry.py  type_chart.py  utils.py
poketactician/engine/: crossover.py  mutation.py  problem.py  sampling.py  selector.py
poketactician/models/: Move.py  Pokemon.py  Pokemon_Query.py  Roles.py  Team.py  Types.py  hinting_types.py  model_utils.py
poketactician/objectives/: __init__.py  dummy_objectives.py
poketactician/test/: test_objectives.py
tests/: conftest.py  test_integration.py  test_poketactician.py  test_registry.py  test_test_utils.py  test_type_chart.py  test_utils.py  test_validation.py  utils.py
tests/engine/: test_crossover.py  test_mutation.py  test_problem.py  test_sampling.py  test_selector.py
tests/objectives/: test_expected_damage.py
(+4 files in other folders)
