[project]
name = "Poketactician"
version = "0.1.0"
requires-python = ">=3.12.1"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "requests>=2.32.3",
    "urllib3>=2.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.3",
]

[build-system]
requires = ["setuptools", "wheel", "numpy==1.26.4","requests==2.32.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["poketactician", "poketactician.models"]  # package names should match these glob patterns (["*"] by default)
exclude = ["dash_app", "data"]

[tool.ruff.lint]
exclude = [".venv", "pokemon.ipynb"]
select = ["F", "E", "ANN"]
ignore = ["E501"]